src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DrinkFeaturesSpecial__c</fullName>
        <label>Drink Features / Special</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DrinksVesselsandBatches__c</fullName>
        <label>Drinks Vessels and Batches</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dupe_Key_Text__c</fullName>
        <inlineHelpText>Used to check uniqueness of record.</inlineHelpText>
        <label>Dupe Key - Text</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EDI_Customer__c</fullName>
        <label>EDI Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDI_Documents__c</fullName>
        <label>EDI Documents</label>
        <picklist>
            <picklistValues>
                <fullName>ASN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EmailBlasts__c</fullName>
        <label>Email Blasts</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id_Aperity_For_Update__c</fullName>
        <description>This will be used in jitterbit operation for updating External_Id_Aperity__c</description>
        <externalId>true</externalId>
        <label>External Id Aperity For Update</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id_Aperity__c</fullName>
        <externalId>true</externalId>
        <label>External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FacebookURL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FeatureAds__c</fullName>
        <label>Feature Ads</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FloorStacking__c</fullName>
        <inlineHelpText>Is floor stacking allowed?</inlineHelpText>
        <label>Floor Stacking</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FoodTypeDescription__c</fullName>
        <label>Food Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <formula>Case(BillingCountry,
&quot;United States&quot;, &quot;United States&quot;,
&quot;Canada&quot;, &quot;Canada&quot;,
&quot;Mexico&quot;, &quot;Mexico&quot;,
&quot;Brazil&quot;, &quot;LATAM&quot;,
&quot;Uruguay&quot;, &quot;LATAM&quot;,
&quot;Bolivia&quot;, &quot;LATAM&quot;,
&quot;Ecuador&quot;, &quot;LATAM&quot;,
&quot;Costa Rica&quot;, &quot;LATAM&quot;,
&quot;Guatemala&quot;, &quot;LATAM&quot;,
&quot;El Salvador&quot;, &quot;LATAM&quot;,
&quot;Peru&quot;, &quot;LATAM&quot;,
&quot;Chile&quot;, &quot;LATAM&quot;,
&quot;Surinam&quot;, &quot;LATAM&quot;,
&quot;Argentina&quot;, &quot;LATAM&quot;,
&quot;Paraguay&quot;, &quot;LATAM&quot;,
&quot;Panama&quot;, &quot;LATAM&quot;,
&quot;Belize&quot;, &quot;LATAM&quot;,
&quot;Other&quot;
)</formula>
        <label>Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLAccountName__c</fullName>
        <label>HL Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HappyHour__c</fullName>
        <label>Happy Hour</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HeroSignageDisplay__c</fullName>
        <label>Hero Signage / Display</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IHubIndex__c</fullName>
        <label>I-Hub Index</label>
        <picklist>
            <picklistValues>
                <fullName>High 21-24 Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High25-29 Index</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IHub__c</fullName>
        <label>I-Hub</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_License_Required__c</fullName>
        <label>Import License Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InstagramHandle__c</fullName>
        <label>Instagram Handle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Documentation_Checklist__c</fullName>
        <label>International Documentation Checklist</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proforma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Analysis with Lot Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Origin with Lot Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Freesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Freesale with Lot Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill of Lading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annex VIII</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Account latitude.</description>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveMusic__c</fullName>
        <label>Live Music</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Account longitude.</description>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingGroup__c</fullName>
        <label>Marketing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLargeBrandDisplayPotential__c</fullName>
        <inlineHelpText>What is the maximum large brand display size potential?
Large Brand = Jim Beam, Pinnacle, etc.
Other Brand = Basil, Knob, etc
.</inlineHelpText>
        <label>Max Large Brand Display Potential</label>
        <picklist>
            <picklistValues>
                <fullName>Bin (1-3 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (3-8 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (8-20 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (20-40 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X Large (40-80 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumbo (80+ phys cs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Military__c</fullName>
        <label>Military?</label>
        <picklist>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <picklist>
            <picklistValues>
                <fullName>1 – Cosmopolitan Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 – Affluent Suburban Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 – Comfortable Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 – Struggling Urban Cores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 – Modest Working Towns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 – Plain Rural Living</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NonPremiseAccountSubType__c</fullName>
        <label>Non-Premise Account Sub-Type</label>
        <picklist>
            <controllingField>NonPremiseAccountType__c</controllingField>
            <picklistValues>
                <fullName>Alumni Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar Academy / Bartending School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College / Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBA (International Bartender Association)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Event (e.g., Whiskey Fest, Cocktail Weeks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant without Liquor License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling (Off and On Premise)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media (e.g., Yelp Elite)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USBG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NonPremiseAccountType__c</fullName>
        <label>Non-Premise Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Licensed Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OriginatingDistributor__c</fullName>
        <label>Originating Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>Action Wholesale Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Abc Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0000029070) - Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0000040295)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0000040528) - Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0001136406) - Alabaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allan S Goodman Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated (0000055592)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens Distributing (Memphis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens Distributing (Nashville)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B &amp; T Distributing Co. Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger North - Fond Du Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Wine &amp; Spirits Llc/Wi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Dist. Corp. (0000028813)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Distributing (0001136548)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellboy Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellboy Corporation (0001131833)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Brands Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bjt Inc (0000080057)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bjt Inc (0000080058)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boardwalk Distribution Company (0001136448)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brescome Barton Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capitol Distributing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolina Wine Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Liquor Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle Sales Incorporated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Distributors Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D &amp; V Distributing (0001145087)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dba Spirit Distributing Co.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutofHomeMerchandising__c</fullName>
        <label>Out of Home Merchandising</label>
        <picklist>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <inlineHelpText>Is POS allowed?</inlineHelpText>
        <label>POS</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patio__c</fullName>
        <label>Patio</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PremiseType__c</fullName>
        <label>Premise Type</label>
        <picklist>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreviousStoreID__c</fullName>
        <externalId>true</externalId>
        <label>Previous Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Posting_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Posting State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Date_Type__c</fullName>
        <label>Pricing Date Type</label>
        <picklist>
            <picklistValues>
                <fullName>PO Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Customer__c</fullName>
        <label>Priority Customer</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RacksEndCaps__c</fullName>
        <inlineHelpText>Are racks or end caps allowed?</inlineHelpText>
        <label>Racks / End Caps</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Account Region.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control States &amp; Na Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsouth Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Samplings__c</fullName>
        <inlineHelpText>Are sampling events allowed?</inlineHelpText>
        <label>Samplings</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShelfPOS__c</fullName>
        <label>Shelf POS</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <label>Ship To #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShotMachines__c</fullName>
        <label>Shot Machines</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <label>Sold To #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialEvents__c</fullName>
        <label>Special Events</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpiritsListing__c</fullName>
        <inlineHelpText>Is there a spirits listing?</inlineHelpText>
        <label>Spirits Listing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SportsThemed__c</fullName>
        <label>Sports Themed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StaffTrainings__c</fullName>
        <label>Staff Trainings</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StandardBarMaterials__c</fullName>
        <label>Standard Bar Materials</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTGOMERY COUNTY MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclassified Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StoreID__c</fullName>
        <externalId>true</externalId>
        <label>Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strip_Stamps__c</fullName>
        <label>Strip Stamps?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>